# FastICA

./: .gitignore
hardware/matrix_multiplier/: create_linux_changehw.sh  create_linux_system.sh  thesis.code-workspace
hardware/matrix_multiplier/hw/: .gitignore
hardware/matrix_multiplier/hw/hdl/: matrix_multiplier_avalon_DE1_SoC.vhd
hardware/matrix_multiplier/hw/modelsim/: matrix_multiplier.cr.mti  matrix_multiplier.mpf  matrix_multiplier_avalon_tb.vhdl  transcript  vish_stacktrace.vstf  vsim.wlf  wave.do
hardware/matrix_multiplier/hw/quartus/: matrix_multiplier_avalon.sdc  matrix_multiplier_avalon_DE1_SoC.qpf  matrix_multiplier_avalon_DE1_SoC.qsf  matrix_multiplier_avalon_DE1_SoC.qws  matrix_multiplier_avalon_hw.tcl  soc_system.qsys  soc_system.sopcinfo
hardware/side_projects/MACs/quartus/: MACs.ipregen.rpt  MACs.qpf  MACs.qsf  MACs.qws  MACs_assignment_defaults.qdf
hardware/side_projects/MACs/src/: MACs.vhdl  transcript  vsim.wlf
hardware/side_projects/MACs_with_memory/: vsim.wlf
hardware/side_projects/MACs_with_memory/quartus/: MACs_with_memory.qpf  MACs_with_memory.qsf  MACs_with_memory.qws
hardware/side_projects/MACs_with_memory/src/: MACs_tb.vhdl  MACs_with_memory.vhdl  multiplier.vhdl  single_memory.vhdl
hardware/side_projects/MACs_with_memory/work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qpg  _lib1_0.qtl
hardware/side_projects/avalon_latency/: avalon_timer.c  avalon_timer.vhdl  avalon_timer_tb.vhdl  transcript  univ_bin_counter.vhdl  vsim.wlf
hardware/side_projects/avalon_latency/work/: _info  _lib.qdb  _lib1_3.qdb  _lib1_3.qpg  _lib1_3.qtl
hardware/side_projects/c_code_ica/: ica  ica.c  test.csv  test2.csv  test3.csv  test4.csv  training  whiten.py  whitening  whitening.c
hardware/side_projects/complete_matrix_multiplier/: matrix_multiplication.vhdl
hardware/side_projects/complete_matrix_multiplier/dot_product/: eight_bit_product.vhdl  four_bit_product.vhdl  matrix_multiplication_be_vedic.vhdl  sixteen_bit_product.vhdl  twentyfour_bits_product.vhdl  two_bit_product.vhdl
hardware/side_projects/complete_matrix_multiplier/dsp/: dsp.bsf  dsp.cmp  dsp.ppf  dsp.qip  dsp.sip  dsp.vhd  dsp_sim.f
hardware/side_projects/complete_matrix_multiplier/memory/: memory_blocks.vhdl  single_memory.qip  single_memory.vhd  single_memory_block.vhdl  types_matrix.vhdl
hardware/side_projects/complete_matrix_multiplier/quartus/: matrix_multiplication.qpf  matrix_multiplication.qsf  matrix_multiplication.qws
hardware/side_projects/dsp_multiplier/: dsp.bsf  dsp.cmp  dsp.ppf  dsp.qip  dsp.spd  dsp.vhd  dsp_multiplier.qpf  dsp_multiplier.qsf  matrix_x_tb.vhdl  transcript  vsim.wlf
hardware/side_projects/dsp_multiplier/db/: dsp_multiplier.cmp.rdb  dsp_multiplier.db_info  dsp_multiplier.map.qmsg
hardware/side_projects/dsp_multiplier/dsp/: dsp_0002.v
hardware/side_projects/dsp_multiplier/dsp_sim/: dsp.vhd
hardware/side_projects/dsp_multiplier/work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qpg  _lib1_0.qtl
hardware/side_projects/mem_decoder/quartus/: mem_decoder.qpf  mem_decoder.qsf  mem_decoder.qws
hardware/side_projects/mem_decoder/src/: mem_decoder.vhdl
hardware/side_projects/memory/: memory.qpf  memory.qsf  memory_test.qip  memory_test.vhd  memory_testbench.vhdl  transcript  vsim.wlf
hardware/side_projects/memory/db/: memory.db_info
hardware/side_projects/memory/greybox_tmp/: cbx_args.txt
hardware/side_projects/memory/work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qpg  _lib1_0.qtl
hardware/side_projects/test_multipliers/docs/: bitacora.txt
hardware/side_projects/test_multipliers/quartus/: test_multipliers.qpf  test_multipliers.qsf  test_multipliers.sdc
hardware/side_projects/test_multipliers/src/: test_multipliers.vhdl  transcript  vsim.wlf
hardware/side_projects/vedic_multiplier/c_verification/: fixed_verification.c
hardware/side_projects/vedic_multiplier/quartus/: vedic_multiplier.qpf  vedic_multiplier.qsf  vedic_multiplier.sdc
software/c_code/: matrix  matrix.c
software/c_code/code/: CMakeLists.txt  ica_for_eeg.c  ica_for_eeg_temp.c  signal_generate.c
software/c_code/code/ica/: CMakeLists.txt  ica.c  ica.h
software/c_code/code/matrix/: CMakeLists.txt  matrix.c
software/c_code/code/matrix_multiplier_arch/: CMakeLists.txt  matrix_multiplier_arch.c  matrix_multiplier_arch.h
software/c_code/code/signal_generator/: CMakeLists.txt  signal_generator.c  signal_generator.h
software/c_code/code/vhdl_entity_manager/: CMakeLists.txt
software/c_code/code_fpga/: CMakeLists.txt  ica_for_eeg.c  ica_for_eeg_real.c
software/c_code/code_fpga/array_utilities/: CMakeLists.txt  array_utilities.c
software/c_code/code_fpga/data_conversion/: CMakeLists.txt  data_conversion.c  data_conversion.h
software/c_code/code_fpga/ica/: CMakeLists.txt
software/c_code/code_fpga/matrix/: CMakeLists.txt  matrix.h
software/c_code/code_fpga/matrix_multiplier_arch/: CMakeLists.txt  dummy.c  matrix_multiplier_arch.c  matrix_multiplier_arch.h
software/c_code/code_fpga/other_codes/: csv_signal_generator.c  ica_original  ica_original.c
software/c_code/code_fpga/signal_generator/: CMakeLists.txt
software/c_code/code_fpga/vhdl_entity_manager/: CMakeLists.txt  vhdl_entity_manager.c  vhdl_entity_manager.h
software/c_code/code_fpga/vhdl_signal_manager/: CMakeLists.txt  vhdl_signal_manager.c
software/c_code/floating_point_conversion/: CMakeLists.txt  floating_point_conversion.c
software/c_code/quantization/: ica  ica.c
software/c_code/testbench/: CMakeLists.txt  conversion_error.c  graph.m  testbench_generator.c
software/c_code/testbench/array_utilities/: array_utilities.c  array_utilities.h
software/c_code/testbench/data_conversion/: data_conversion.c  data_conversion.h
software/c_code/testbench/entity_manager/: CMakeLists.txt  entity_manager.c  entity_manager.h
software/c_code/testbench/matrix/: CMakeLists.txt  matrix.c  matrix.h
software/c_code/testbench/signal_manager/: CMakeLists.txt  signal_manager.c  signal_manager.h
software/linux_drivers/matrix_multiplier_arch/: matrix_multiplier_arch.c  matrix_multiplier_arch.h
(+1238 files in other folders)
